--- a/SisteFinanPes/Planilha/src/main/webapp/resources/css/style.css
+++ b/SisteFinanPes/Planilha/src/main/webapp/resources/css/style.css
@@ -1,9 +1,55 @@
-/* Style The Dropdown Button */
-.dropbtn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-  }
+body {
+  background-color: #2c3e50;
+}
+
+
+/* Constumização do  Dropdown Box */
+
+.dropdown-box{
+   position: relative;
+   display: inline-block;
+   vertical-align: middle;
+}
+
+.dropbox-estilo {
+  padding-right: 2.5em; /* accommodate with the pseudo elements for the dropdown arrow */				
+  border: 0;
+  border-radius: 3px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;    
+}
+
+.dropdown-box::after { /*  Custom dropdown arrow */
+  content: "\25BC";
+  height: 1em;
+  font-size: .625em;
+  line-height: 1;
+  right: 1.2em;
+  top: 50%; margin-top: -.5em;
+}
+
+.dropdown-box::before { /*  Custom dropdown arrow cover */
+  width: 2em;
+  right: 0; top: 0; bottom: 0;
+  border-radius: 0 3px 3px 0;
+}
+
+.dropdown-box::before,
+.dropdown-box::after {
+  content: "";
+  position: absolute;
+  pointer-events: none;
+}
+
+.dropdown-box {
+  margin: 10px;
+  display: inline-block;
+}
+
+/* FF only temporary & ugly fixes */
+  /* the "appearance: none" applied on select still shows a dropdown arrow on Firefox */
+  /* https://bugzilla.mozilla.org/show_bug.cgi?id=649849 */
+  @-moz-document url-prefix() {
+    .dropbox-estilo  						 { padding-right: .9em } 
+  }	
