--- a/SisteFinanPes/Planilha/src/main/webapp/resources/css/style.css
+++ b/SisteFinanPes/Planilha/src/main/webapp/resources/css/style.css
@@ -1,6 +1,82 @@
-body {
-  background-color: white;
+@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
+
+* {
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
 }
+
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: #f6f6f6;
+}
+
+.box
+{
+    width: 300px;
+}
+
+.box h2{
+   color: #fff;
+   background: #03a9f4;
+   padding: 10px 20px;
+   font-size: 20px;
+   font-weight: 700;
+   border-top-left-radius: 10px;
+   border-top-right-radius: 10px;
+}
+
+.box ul{
+    position: relative;
+    background: #fff;
+}
+
+.box li{
+    list-style: none;
+    padding: 10px;
+    width: 100%;
+    background: #fff;
+    box-shadow: 0 5px 25px rgba(0,0,0,.1);
+    transition-duration: 0.2s;
+}
+
+.box ul li:hover{
+    transform: scale(1.1);
+    z-index: 100;
+    background: #25bcff;
+    box-shadow: 0 5 25px rgba(0,0,0,.2);
+    color: #fff;
+}
+
+.box ul li span{
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    line-height: 20px;
+    background-color: #25bcff;
+    color: #fff;
+    display: inline-block;
+    border-radius: 50%;
+    margin-right: 10px;
+    font-size: 12px;
+    font-weight: 600;
+    transform: translateY(-2px);
+}
+
+
+.box ul li:hover span{
+    background: #fff;
+    color: #25bcff
+}
+
+
+/* Fim da Customização da Lista Simples */
+/* -------------------------------------------------------------------/*
 
 /* Constumização do  Dropdown Box */
 
