--- a/PlanilhaV2/planilha-web/src/main/frontend/src/app/sidebar/sidebar.component.html
+++ b/PlanilhaV2/planilha-web/src/main/frontend/src/app/sidebar/sidebar.component.html
@@ -1,21 +1,1 @@
-<nav>
-    <div class="logo-name">
-        <div class="logo-image">
-            <img src="assets/images/logo.png" alt="">
-            <span class="logo-name">Planilha</span>
-        </div>
-    </div>
-
-    <!-- Area dos Menus laterais-->
-    <div class="menu-items">
-        <ul class="nav-links">
-            <li *ngFor="let menus of menus">
-                <a href={{menus.link}}>
-                <i class="uil uil-{{menus.icon}}"></i>
-                <span class="link-name">{{menus.nome}}</span>
-                </a>
-            </li>
-        </ul>
-    </div>
-
-</nav>
+<h1>Sidebar ta On!</h1>
