--- a/PlanilhaV2/planilha-web/src/main/frontend/src/app/app.component.html
+++ b/PlanilhaV2/planilha-web/src/main/frontend/src/app/app.component.html
@@ -1,30 +1,60 @@
-<nav>
-    <div class="logo-name">
-        <div class="logo-image">
-            <img src="assets/images/logo.png" alt="">
-            <span class="logo-name">Planilha</span>
-        </div>
-    </div>
+<section id="sidebar">
+    <a  href="#" class="brand">
+        <i class='bx bx-money'></i>
+        <span class="text">Planilha</span>
+    </a>
+    <ul class="side-menu top">
+        <li class="active">
+            <a href="#">
+                <i class="bx bxs-dashboard"></i>
+                <span class="text">Dashboard</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <i class="bx bxs-shopping-bag-alt"></i>
+                <span class="text">Compras</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <i class="bx bxs-dashboard"></i>
+                <span class="text">Dashboard</span>
+            </a>
+        </li>
+    </ul>
 
-    <!-- Area dos Menus laterais-->
-    <div class="menu-items">
-        <ul class="nav-links">
-            <li *ngFor="let menus of menus">
-                <a href={{menus.link}}>
-                <i class="uil uil-{{menus.icon}}"></i>
-                <span class="link-name">{{menus.nome}}</span>
-                </a>
-            </li>
-        </ul>
-    </div>
-    
+    <ul class="side-menu">
+        <li>
+            <a href="#">
+                <i class="bx bxs-cog"></i>
+                <span class="text">Settings</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <i class="bx bxs-log-out-circle"></i>
+                <span class="text">Logout</span>
+            </a>
+        </li>
+    </ul>
+</section>
+
+<section id="content">
+     <nav>
+         <i class="bx bx-menu"></i>
+         <a href="#" class="nav-link">Categories</a>
+         <form action="#">
+             <div class="form-input">
+                 <input type="search" placeholder="Search....">
+             </div>
+         </form>
+     </nav>
+</section>
+
+
 <router-outlet></router-outlet>
-  
-<div style="display: none;">
-    <app-sidebar></app-sidebar>
-</div>
-
-</nav>
+ 
 
 
 
