--- a/PlanilhaV2/planilha-web/src/main/frontend/src/styles.css
+++ b/PlanilhaV2/planilha-web/src/main/frontend/src/styles.css
@@ -1,122 +1,143 @@
 /* Global CSS para a Aplicação*/
 
 /* ===== Google Font Import - Poppins ===== */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Poppins:wght@400;500;600;700&display=swap');
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
-
+/* Variaveis Locais e Constantes */
 :root{
-    /* ===== Coores trabalhadas ===== */
-    --primary-color: #0E4BF1;
-    --panel-color: #FFF;
-    --text-color: #000;
-    --black-light-color: #707070;
-    --border-color: #e6e5e5;
-    --toggle-color: #DDD;
-    --box1-color: #4DA3FF;
-    --box2-color: #FFE6AC;
-    --box3-color: #E7D1FC;
-    --title-icon-color: #fff;
+    --lato: 'Lato', sans-serif;
+
+    --light: #F9F9F9;
+    --blue: #3C91E6;
+    --yellow: #FFCE26;
+    --grey: #eee;
+    --dark-grey: #342E37;
+    --dark: #342E37;
+    --green: #3dd883;
     
-    /* ====== Transicoes ========= */
-    --tran-05: all 0.5s ease;
-    --tran-03: all 0.3s ease;
-    --tran-03: all 0.2s ease;
+
 }
+
 
 body{
-    min-height: 100vh;
-    background-color: var(--primary-color);
+    background: var(--grey);
 }
 
-nav{
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+a {
+	text-decoration: none;
+}
+
+li {
+	list-style: none;
+}
+
+/* SIDEBAR CSS */
+
+#sidebar{
     position: fixed;
     top: 0;
     left: 0;
+    width: 280px;
     height: 100%;
-    width: 250px;
-    padding: 10px 14px;
-    background-color: var(--panel-color);
-    border-right: 1px solid var(--border-color);
-    transition: var(--tran-05);
+    background: var(--light);
+    z-index: 1000;
+    font-family: var(--lato);
 }
 
-nav .logo-name{
-    display: flex;
-    align-items: center;
-}
-
-nav .logo-image{
-    display: flex;
-    justify-content: center;
-    min-width: 45px;
-}
-
-
-nav .logo-image img{
-    width: 40px;
-    object-fit: cover;
-    border-radius: 50%;
-}
-
-nav .logo-name .logo-name{
-    font-size: 22px;
-    font-weight: 600;
-    color: var(--text-color);
-    margin-left: 14px;
-    transition: var(--tran-05);
-}
-
-
-/* Menus Items */
-nav .menu-items{
-    margin-top: 40px;
-    height: calc(100% - 90px);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.menu-items li{
-    list-style: none;
-}
-
-.menu-items li a{
-    display: flex;
-    align-items: center;
-    height: 50px;
-    text-decoration: none;
-    position: relative;
-}
-
-.nav-links li a:hover:before{
-    content: "";
-    position: absolute;
-    left: -7px;
-    height: 5px;
-    width: 5px;
-    border-radius: 50%;
-    background-color: var(--primary-color);
-}
-
-.menu-items li a i{
+#sidebar .brand{
     font-size: 24px;
-    min-width: 45px;
-    height: 100%;
+    font-weight: 700;
+    height: 56px;
     display: flex;
     align-items: center;
-    justify-content: center;
-    color: var(--black-light-color);
+    color: var(--green);
+    position: sticky;
 }
 
-.menu-items li a .link-name{
-    font-size: 18px;
-    font-weight: 400;
-    color: var(--black-light-color);    
-    transition: var(--tran-05);
+#sidebar .brand .bx{
+    min-width: 60px;
+    display: flex;
+    justify-content: center;
 }
+
+#sidebar .side-menu{
+     width: 100%;
+     margin-top: 48px;
+}
+
+#sidebar .side-menu li{
+    height: 48px;
+    background: transparent;
+    margin-left: 6px;
+    border-radius: 48px 0 0 48px;
+    padding: 4px;
+}
+
+#sidebar .side-menu li.active{
+    background: var(--grey);
+    position: relative;
+    z-index: 100;
+}
+
+#sidebar .side-menu li.active::before {
+    content: '';
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    top: -40px;
+    right: 0;
+    box-shadow: 20px 20px 0 var(--grey);
+    z-index: -1;
+}
+
+#sidebar .side-menu li.active::after {
+    content: '';
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    bottom: -40px;
+    right: 0;
+    box-shadow: 20px -20px 0 var(--grey);
+    z-index: -1;
+}
+
+#sidebar .side-menu li a { 
+    width: 100%;
+    height: 100%;
+    background: var(--light);
+    display: flex;
+    align-items: center;
+    border-radius: 48px;
+    font-size: 16px;
+    color: var(--dark);
+}
+
+#sidebar .side-menu.top li a:hover{
+    color: var(--blue);
+}
+
+#sidebar .side-menu li a .bx{
+    min-width: calc(60px - ((4px + 6px) * 2));
+    display: flex;
+    justify-content: center;
+    font-size: 18px;
+}
+
+/* SIDEBAR CSS - FIM */
+
+/* CONTENT - INICIO */
+
+#content {
+    position: relative;
+    left: 280px;
+}
+
+/* CONTENT - FIM */
