Atualizacao Front END navabar

--- a/PlanilhaV2/planilha-web/src/main/frontend/src/app/app.component.html
+++ b/PlanilhaV2/planilha-web/src/main/frontend/src/app/app.component.html
@@ -47,8 +47,16 @@
          <form action="#">
              <div class="form-input">
                  <input type="search" placeholder="Search....">
+                 <button type="submit" class="search-btn"><i class="bx bx-search"></i></button>   
              </div>
          </form>
+         <a href="#" class="notification">
+             <i class="bx bxs-bell"></i>
+             <span class="num">8</span>
+         </a>
+         <a href="#" class="profile">
+             <img src="assets/images/profile.jpg">
+         </a>
      </nav>
 </section>
 
