--- a/PlanilhaV2/planilha-web/src/main/frontend/src/styles.css
+++ b/PlanilhaV2/planilha-web/src/main/frontend/src/styles.css
@@ -14,6 +14,7 @@
     --dark-grey: #342E37;
     --dark: #342E37;
     --green: #3dd883;
+    --red: #e41515;
     
 
 }
@@ -137,7 +138,104 @@ li {
 
 #content {
     position: relative;
+    width: calc(100% - 280px);
     left: 280px;
 }
 
+/* NAVBAR - INICIO */
+#content nav {
+    height: 56px;
+    background: var(--light);
+    padding: 0 24px;
+    display: flex;
+    align-items: center;
+    grid-gap: 24px;
+    font-family: var(--lato);
+}
+
+#content nav a{
+    color: var(--dark);
+}
+
+#content nav .bx.bx-menu{
+    cursor: pointer;
+}
+
+#content nav .nav-link{
+    font-size: 16px;
+    transition: .3s ease;
+}
+
+#content nav .nav-link:hover{
+    color: var(--blue);
+}
+
+#content nav form{
+    max-width: 400px;
+    width: 100%;
+    margin-right: auto;
+}
+
+#content nav form .form-input{
+    display: flex;
+    align-items: center;
+    height: 36px;
+}
+
+#content nav form .form-input input{
+    flex-grow: 1;
+    padding: 0 16px;
+    height: 100%;
+    border: none;
+    background: var(--grey);
+    border-radius: 36px 0 0 36px;
+    outline: none;
+}
+
+#content nav form .form-input button{ 
+    width: 36px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--blue);
+    color: var(--light);
+    font-size: 18px;
+    border: none;
+    outline: none;
+    border-radius: 0 36px 36px 0;
+    cursor: pointer;
+}
+
+#content nav .notification{ 
+    font-size: 20px;
+    position: relative;
+}
+
+#content nav .notification .num{
+    position: absolute;
+    top: -6px;
+    right: -6px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 2px solid var(--light);
+    background: var(--red);
+    color: var(--light);
+    font-weight: 700;
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#content nav .profile img{
+    width: 36px;
+    height: 36px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+
+
+/* NAVBAR - FIM */
 /* CONTENT - FIM */
