--- a/PlanilhaV2/planilha-web/src/main/frontend/src/app/app.component.html
+++ b/PlanilhaV2/planilha-web/src/main/frontend/src/app/app.component.html
@@ -58,6 +58,30 @@
              <img src="assets/images/profile.jpg">
          </a>
      </nav>
+
+
+     <!-- MAIN-->
+      <main>
+          <div class="head-title">
+              <div class="left">
+                  <h1>Dashboard</h1>
+                  <ul class="breadcrumb">
+                      <li>
+                          <a href="#">Dashbard</a>
+                      </li>
+                      <li><i class="bx bx-chevron-right"></i></li>
+                      <li>
+                          <a href="#">Home</a>
+                      </li>
+                  </ul>
+              </div>
+              <a href="#" class="btn-download">
+                  <i class="bx bxs-cloud-download "></i>
+                  <span class="text">Download PDF</span>
+              </a>
+          </div>
+      </main>
+     <!-- MAIN-->
 </section>
 
 
