Atualizacao Front/Backend

--- a/angular13-springboot/frontend/src/app/app.component.html
+++ b/angular13-springboot/frontend/src/app/app.component.html
@@ -5,6 +5,9 @@
             <li class="nav-item">
               <a href="/home" class="nav-link" routerLink="home">Home </a>
             </li>
+            <li class="nav-item">
+               <a href="/naoexiste" class="nav-link" routerLink="naoexasdte">404</a>
+             </li>
         </ul>    
    </nav>
    <div class="container">
