Atualizacao do Front

--- a/angular13-springboot/frontend/src/app/app.component.html
+++ b/angular13-springboot/frontend/src/app/app.component.html
@@ -8,6 +8,9 @@
             <li class="nav-item">
                <a href="/naoexiste" class="nav-link" routerLink="naoexasdte">404</a>
              </li>
+             <li class="nav-item">
+               <a href="/dashboard" class="nav-link" routerLink="dashboard">Dashboard</a>
+             </li>
         </ul>    
    </nav>
    <div class="container">
