--- a/angular13-springboot/frontend/src/app/dashboard/dashboard.component.html
+++ b/angular13-springboot/frontend/src/app/dashboard/dashboard.component.html
@@ -43,6 +43,33 @@
         <!-- Inicio da Despesas a Serem pagas-->
         <div class="row">
             <div class="col-lg-6 col-md-12">
+                <mat-card>
+                    <mat-card-title>Despesas Fixas</mat-card-title>
+                    <mat-card-actions>
+                      <button mat-raised-button color="primary" matBadge="7" matBadgeColor="accent" (click)="selecaoPj()"><mat-icon style="margin: 5px">apartment</mat-icon> Empresa PJ</button>
+                      <button mat-raised-button color="primary" ><mat-icon style="margin: 5px">family_restroom</mat-icon>Familia</button>
+                      
+                    </mat-card-actions>
+
+                  </mat-card>
+                                      
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" *ngIf="isPjActive">
+
+  <ng-container matColumnDef="position">
+    <th mat-header-cell *matHeaderCellDef> No. </th>
+    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef> Nome </th>
+    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table> 
+
+                <!--
                 <div class="card">
                     <div class="card-header card-header-tabs card-header-primary">
                         <div class="nav-tabs-navigation">
@@ -50,7 +77,7 @@
                                 <span class="nav-tabs-title">Despesas Fixas :</span> 
                                 <ul class="nav nav-tabs" data-tabs="tabs">
                                     <li class="nav-item">
-                                        <a mat-button class="nav-link active" href="#profile" data-toggle="tab">
+                                        <a mat-button class="nav-link active" href="#profile" data-toggle="tab" matBadge="7" matBadgeColor="accent">
                                             <i class="material-icons">apartment</i> Empresa PJ
                                             <div class="ripple-container"></div>
                                         </a>
@@ -61,6 +88,11 @@
                                             <div class="ripple-container"></div>
                                         </a>
                                     </li>
+                                    <mat-tab-group mat-align-tabs="center">
+                                        <mat-tab label="First">Content 1</mat-tab>
+                                        <mat-tab label="Second">Content 2</mat-tab>
+                                        <mat-tab label="Third">Content 3</mat-tab>
+                                      </mat-tab-group>
                                 </ul>
                             </div>
                         </div> 
@@ -94,7 +126,7 @@
                                     </tbody>
                                 </table>
                             </div>
-                            <div class="tab-pane active" id="messages">
+                            <div class="tab-pane active" id="messages" name="messages">
                                 <table class="table">
                                 <tbody>
                                     <tr>
@@ -124,7 +156,7 @@
                             </div>
                         </div>
                     </div>
-                </div>    
+                </div>   --> 
             </div>    
         </div>    
 
