--- a/angular13-springboot/frontend/src/app/dashboard/dashboard.component.css
+++ b/angular13-springboot/frontend/src/app/dashboard/dashboard.component.css
@@ -1,3 +1,11 @@
 button:first-child{
     margin-right: 1000px;
 }
+
+td.mat-cell{
+    padding: 10px;
+}
+
+th.mat-header-cell{
+    padding: 10px
+}
