--- a/angular13-springboot/frontend/src/app/dashboard/dashboard.component.html
+++ b/angular13-springboot/frontend/src/app/dashboard/dashboard.component.html
@@ -46,28 +46,41 @@
                 <mat-card>
                     <mat-card-title>Despesas Fixas</mat-card-title>
                     <mat-card-actions>
-                      <button mat-raised-button color="primary" matBadge="7" matBadgeColor="accent" (click)="selecaoPj()"><mat-icon style="margin: 5px">apartment</mat-icon> Empresa PJ</button>
+                      <button mat-raised-button color="primary" matBadge="15" matBadgeColor="accent" (click)="selecaoPj()" style="margin-right: 5px"><mat-icon>apartment</mat-icon> Empresa PJ</button>
                       <button mat-raised-button color="primary" ><mat-icon style="margin: 5px">family_restroom</mat-icon>Familia</button>
                       
                     </mat-card-actions>
 
-                  </mat-card>
-                                      
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" *ngIf="isPjActive">
-
-  <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef> No. </th>
-    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-  </ng-container>
+                  
+<section class="example-container mat-elevation-z8" tabindex="0">
+<table mat-table [dataSource]="dataSource" *ngIf="isPjActive">
 
   <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Nome </th>
+    <th mat-header-cell *matHeaderCellDef> Nome Despesa </th>
     <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="dataVencimento">
+    <th mat-header-cell *matHeaderCellDef> Data Vencimento </th>
+    <td mat-cell *matCellDef="let element"> {{element.dataVencimento}} </td>
+  </ng-container>
+
+  
+  <ng-container matColumnDef="valor">
+    <th mat-header-cell *matHeaderCellDef> Valor </th>
+    <td mat-cell *matCellDef="let element"> {{element.valor}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="situacao">
+    <th mat-header-cell *matHeaderCellDef> Situacao(Pagamento) </th>
+    <td mat-cell *matCellDef="let element"> <div *ngIf="element.situacao"></div> </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table> 
+</section>
+</mat-card>
 
                 <!--
                 <div class="card">
