--- a/angular13-springboot/frontend/src/app/dashboard/dashboard.component.html
+++ b/angular13-springboot/frontend/src/app/dashboard/dashboard.component.html
@@ -46,7 +46,7 @@
                 <mat-card>
                     <mat-card-title>Despesas Fixas</mat-card-title>
                     <mat-card-actions>
-                      <button mat-raised-button color="primary" matBadge="15" matBadgeColor="accent" (click)="selecaoPj()" style="margin-right: 5px"><mat-icon>apartment</mat-icon> Empresa PJ</button>
+                      <button mat-raised-button color="primary" matBadge="{{dataSource.length}}" matBadgeColor="accent" (click)="selecaoPj()" style="margin-right: 5px"><mat-icon>apartment</mat-icon> Empresa PJ</button>
                       <button mat-raised-button color="primary" ><mat-icon style="margin: 5px">family_restroom</mat-icon>Familia</button>
                       
                     </mat-card-actions>
@@ -68,12 +68,16 @@
   
   <ng-container matColumnDef="valor">
     <th mat-header-cell *matHeaderCellDef> Valor </th>
-    <td mat-cell *matCellDef="let element"> {{element.valor}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.valor | currency: 'BRL'}} </td>
   </ng-container>
 
   <ng-container matColumnDef="situacao">
     <th mat-header-cell *matHeaderCellDef> Situacao(Pagamento) </th>
-    <td mat-cell *matCellDef="let element"> <div *ngIf="element.situacao"></div> </td>
+    <td mat-cell *matCellDef="let element"> 
+        <div *ngIf="element.situacao != 'N'; else elseBlock"><i class="material-icons feito">done</i></div>
+        <ng-template #elseBlock><i class="material-icons pendente">close</i></ng-template>
+           
+    </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
